[project]
name = "integrated-nodes-comfyui"
description = "This tool will turn entire workflows or parts of them into single integrated nodes. In a way, it is similar to the Node Templates functionality but hides the inner structure. This is useful if all you want is to reuse and quickly configure a bunch of nodes without caring how they are interconnected."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/palant/integrated-nodes-comfyui"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "integrated-nodes-comfyui"
Icon = ""
